# RAGbotD4

./: .dockerignore  .gitignore  DBservices.py  DEPLOYMENT_SETUP.md  Dockerfile.backend  Dockerfile.frontend  app.py  build_embeddings.py  config.py  dockerignore  embed.py  free_model.py  main.py  pyproject.toml  rag.py  requirments.txt  streamlit_app.py  structure.py
.github/workflows/: deploy.yml
backend/: TTS_services.py  agent.py  app.py  embedding.py  endpoint.py  gcs_sync.py  gsc_sync.py.py  read_data.py  services.py  test.py  upload_service.py
backend/auth/: face_service.py  password_service.py  routes.py
backend/chroma_db/: chroma.sqlite3
backend/data/: config.py  netsol_faq.csv  netsol_faqs.csv
backend/embeddings/: build_embeddings.py  embedding.py
backend/models/: free_model.py  model.py
backend/services/: DBservices.py  STTvoice_services.py  TTS_services.py  embed.py  upload_service.py
backend/servicesFiles/: STTvoice_services.py  TTS_services.py  upload_service.py
chroma_db/: chroma.sqlite3
frontend/: chat_input.py  login_app.py  package.json  streamlit_app.py
frontend-next/: package-lock.json
frontend-next/app/: globals.css  layout.js  page.js
frontend-next/app/lib/: auth.js
frontend-next/app/login/: page.js
frontend-next/frontend-next/: Dockerfile
frontend/app/: globals.css  page.js
frontend/app/login/: page.js
frontend/pages/: app.py
