[project]
name = "ragbotd4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi>=2026.6.17",
    "chromadb>=1.5.9",
    "fastapi>=0.137.2",
    "pandas>=3.0.3",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
    "fastapi",
    "pymongo",
    "streamlit",
    "requests",
    "pandas",
    "numpy",
    "scikit-learn",   # for cosine_similarity
    "python-dotenv",
    "chromadb",
    "markdown>=3.10.2",
    "langchain-openrouter>=0.2.4",
    "langchain-openai>=1.3.3",
    "websockets>=14",
    "deepgram-sdk>=7.3.1",
    "langchain-google-genai>=4.2.6",
    "langchain-groq>=1.1.3",
    "kokoro>=0.9.4",
    "soundfile>=0.14.0",
]
