[project]
name = "ragbotd4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "certifi",
    "chromadb>=1.5.9",
    "fastapi>=0.137.2",
    "pandas>=2.2",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
    "numpy>=1.26",
    "scikit-learn",
    "markdown>=3.10.2",
    "langchain-openrouter>=0.2.4",
    "langchain-openai>=1.3.3",
    "websockets>=14",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "langchain-text-splitters>=0.3.0",
    "langchain>=1.3.11",
    "google-cloud-storage>=3.12.0",
    "deepgram-sdk>=3.0.0",
    "kokoro>=0.7.0",
    "soundfile>=0.12.0",
    "langchain-groq>=1.1.3",
]